[package]
name = "morocco"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
chrono = "0.4.20"
clap = { version = "3.2.17", features = ["derive"]}
env_logger = "0.9.0"
json = "0.12.4"
log = "0.4.17"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
sqlite = "0.27.0"
uuid = { version = "1.1.2", features = ["serde", "v4"] }

